# MusicRecognizer

./: .dockerignore  .env  .gitattributes  DockerFile  Dockerfile  README.md  gitignore  pyproject.toml
.github/workflows/: deploy.yaml
src/: app.py
tests/: test_app.py
